-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15, 6.2, 6.5
-
None
-
-
f6cd286e6 (dev), c1daaf521 (6.7), ada3ec57f (tqtc/lts-6.5)
src/widgets/util/qsystemtrayicon_x11.cpp is built whenever the xcb backend is enabled. It connects to QXcbNativeInterface::systemTrayWindowChanged but Wayland doesn't provide QXcbNativeInterface obviously what results in the warning. I guess it has to check what qGuiApp->platformNativeInterface() actually implements.
To reproduce the warning, one has to launch any Qt application creating QSystemTrayIcon condition-lessly (i.e. even if QSystemTrayIcon::isSystemTrayAvailable() returns false) on a Wayland system without tray.